--- a/global.css
+++ b/global.css
@@ -8,3 +8,40 @@ body {
   margin: auto;
   padding: 1em;
 }
+
+header {
+  display: flex;
+  justify-content: space-between; /* ensures items stretch across the full width */
+  align-items: center;
+  padding: 1em 2em;
+  gap: 4em;
+}
+
+header h1 {
+  font-size: 1.75em;
+  white-space: nowrap;
+  margin: 0;
+}
+
+header label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.3em;
+  margin-left: auto;
+  font-weight: normal;
+}
+
+header input[type="range"] {
+  width: 200px;
+}
+
+header time,
+header em {
+  display: block;
+}
+
+header em {
+  color: #888;
+  font-style: italic;
+}
