--- a/map.css
+++ b/map.css
@@ -23,3 +23,12 @@ body {
   height:100%;
   pointer-events: none;
 }
+
+svg circle {
+  fill: steelblue;
+  fill-opacity: 0.6;
+  stroke: white;
+  stroke-width: 1px;
+  pointer-events: auto;
+}
+
